Fixed Overlap on Small iPhones

--- a/src/App.css
+++ b/src/App.css
@@ -78,8 +78,9 @@ body {
 }
 
 h1 {
+  margin-top: 1rem;
   font-family: 'Carter One', sans-serif;
-  font-size: calc(2.2rem + 5vmin);
+  font-size: calc(2.1rem + 4dvw);
   height: 2em;
   line-height: 1.1em;
 }
@@ -92,14 +93,14 @@ h1 {
   background-color: #fff;
   border: 1px solid transparent;
   border-radius: 1em;
-  box-shadow: 0.6em 0.6em 1.5vh #c5c2c28a;
+  box-shadow: 0.6em 0.6em 1.6vh #c5c2c28a;
   color: #6b6b6b;
   font-family: inherit;
   font-size: 4.5vmin;
   font-weight: 800;
   margin: 25px 30px;
   outline: none;
-  padding: 1.5em 2.5em;
+  padding: 1.5em 1.9em;
   text-align: center;
   text-overflow: ellipsis;
   text-transform: uppercase;
@@ -107,10 +108,10 @@ h1 {
 }
 
 .initial-input:focus {
-  -webkit-box-shadow: 1em 1em 2.5vh #8f8c8c8a;
-  box-shadow: 1em 1em 2.5vh #8f8c8c8a;
+  -webkit-box-shadow: 1em 1em 2.6vh #8f8c8c8a;
+  box-shadow: 1em 1em 2.6vh #8f8c8c8a;
   outline: none;
-  transform: scale(1.09);
+  transform: scale(1.15);
 }
 
 .initial-input::placeholder {
@@ -237,10 +238,11 @@ button:disabled:hover {
   justify-content: space-evenly;
   margin: 1.5rem 0;
   width: 80%;
+  margin: 1em;
 }
 
 .modal-heading {
-  font-size: calc(2.15rem + 5vmin);
+  font-size: calc(2rem + 4dvw);
   line-height: 1.1em;
   font-family: 'Carter One', sans-serif;
 
